# lab-lens

./: .dockerignore  .gitignore  API_ENDPOINT_UPDATE.md  API_SETUP_COMPLETE.md  BIOMEDCLIP_SETUP_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cloudrun  GEMINI_API_KEY_ISSUES.md  INTEGRATE_MEDICAL_MODEL.md  MEDICAL_MODEL_INTEGRATION.md  MIGRATION_GUIDE.md  MODEL_COMPARISON.md  MODEL_DEVELOPMENT_VALIDATION_INTEGRATION.md  MODEL_TESTING_GUIDE.md  PROJECT_STRUCTURE.md  Procfile  RAG_IMPLEMENTATION_SUMMARY.md  RAG_PATIENT_QA_GUIDE.md  RAG_QUICK_START.md  RAG_SINGLE_PATIENT_GUIDE.md  RAG_SINGLE_PATIENT_UPDATE.md  RAG_SINGLE_PATIENT_USAGE.md  RAG_STATUS_REPORT.md  RAG_TESTING_GUIDE.md  RAG_TESTING_SOLUTION.md  RAG_TEST_SOLUTION.md  README.md  TESTING_GUIDE.md  WEB_INTERFACE_SETUP.md  deploy-to-cloud-run.sh  docker-compose.yml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml.template
airflow/: airflow.cfg  webserver_config.py
data_pipeline/: README.md  __init__.py  edits.md
docs/: API_SETUP.md  BIGQUERY_SETUP.md  CI_CD_SETUP.md  COMPLETE_REQUIREMENTS_STATUS.md  FILE_QA_GUIDE.md  FINE_TUNING_EXPLANATION.md  GCP_SERVICE_ACCOUNT_SETUP.md  GEMINI_API_SETUP.md  INSTALL_GCLOUD.md  MEDICAL_MODEL_ALTERNATIVES.md  MODEL_DEVELOPMENT_CHECKLIST.md  MODEL_DEVELOPMENT_GUIDE.md  MODEL_GUIDE.md  MODEL_TESTING_GUIDE.md  PROMPT_ENGINEERING_DETAILS.md  RAG_GUIDE.md  README.md  REPOSITORY_ORGANIZATION.md  RISK_PREDICTION.md  SAFETY_FILTER_SOLUTIONS.md  TROUBLESHOOTING.md  WEB_INTERFACE_GUIDE.md
(+143 files in other folders)
